; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_pixie-threads.c_pixie_cpu_get_count.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_pixie-threads.c_pixie_cpu_get_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"sched_getaffinity\00", align 1
@CTL_HW = common dso_local global i32 0, align 4
@HW_NCPU = common dso_local global i32 0, align 4
@MPC_GETNUMSPUS = common dso_local global i32 0, align 4
@_SC_NPROCESSORS_ONLN = common dso_local global i32 0, align 4
@_SC_NPROC_ONLN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pixie_cpu_get_count() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = call i32 (...) @getpid()
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @sched_getaffinity(i32 %6, i32 4, i32* %3)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = call i32 @perror(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %13

12:                                               ; preds = %0
  store i32 1, i32* %1, align 4
  br label %13

13:                                               ; preds = %12, %10
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @sched_getaffinity(i32, i32, i32*) #1

declare dso_local i32 @perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
